function merge table be + fe (unfix)